src/objects/loan__ACH_Return_Transaction_Interface__c.object
<CustomObject>
    <description>Automated Clearing House</description>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Reference_No__c</fullName>
        <label>Bank Reference No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Customer_Account_No__c</fullName>
        <label>Customer Account No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipName>ACH_Return_Transactions_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>ACH_Return_Transactions_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Return_Code__c</fullName>
        <label>Return Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <description>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Record has been created in target system
Post-Import Valid - Post record creation validations completed
Error - Record is in error state</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>ACH Return Transaction Interface</label>
    <nameField>
        <label>ACH Return Transaction Interface ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACH Return Transactions Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>